# soundobj

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/soundobj/: __init__.py  _build_ffi.py  _vcpkg.py  declarations.h
